<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.unice.si3.ihm.ihm_enseigne_manuela.FirstScreenActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_load"
        android:scaleType="centerCrop"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/load_sentence"
        android:textColor="#000000"
        android:textSize="70sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">
            <Button
                android:id="@+id/list_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_shops"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/compare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compare_button"
                android:textSize="25sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
