<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapShopActivity">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="mapTag"
            tools:context="fr.unice.si3.ihm.ihm_enseigne_manuela.MapShopActivity" />

        <RelativeLayout
            android:id="@+id/header_map"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#80000000"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/drawer_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/drawer_icon"
                android:layout_marginRight="@dimen/margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:id="@+id/textView2"
                android:layout_toEndOf="@+id/drawer_button"/>

            <EditText
                android:id="@+id/searchText"
                android:layout_width="@dimen/length_search_text"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="textAutoCorrect"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView2" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/searchText"
                android:background="@drawable/search" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/close" />


        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black"
        android:choiceMode="singleChoice"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liste_des_magasins_to_be_or_to_have"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_size" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/alphabet_order"
                android:textColor="@color/white"
                android:checked="true"
                android:textSize="@dimen/radiobutton_text_size" />

            <RadioButton
                android:id="@+id/revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/chiffre_d_affaires"
                android:textColor="@color/white"
                android:textSize="@dimen/radiobutton_text_size" />

            <RadioButton
                android:id="@+id/numberOfEmployees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/number_employees"
                android:textColor="@color/white"
                android:textSize="@dimen/radiobutton_text_size" />
        </RadioGroup>

        <ListView
            android:id="@+id/left_list"
            android:layout_width="@dimen/drawer_width"
            android:layout_height="match_parent"
            android:background="@color/black" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>


